<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.SetID">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/activitySetIDSetIDLAbel"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/polarIDSetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/activitySetIDNewIDLabel"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hhr_alarm_setting"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/activitySetIDEntryHint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSetIDConnect"
        style="@android:style/Widget.Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@color/colorPrimary"
        android:onClick="onClickSetIDConnect"
        android:padding="8dp"
        android:text="@string/activitySetIDConnectButtonLabel"
        android:textColor="@color/colorAccent" />


</LinearLayout>